<resources>

    <string name="songsListUrl">"http://www.inf.ed.ac.uk/teaching/courses/selp/data/songs/songs.xml"</string>


    <string name="app_name">Songle</string>
    <string name="title_activity_lyric_map_ui">LyricMapUI</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="home_welcome">Welcome to Songle!</string>
    <string name="home_app_intro">
        "\nSongle is an interactive game - it's easy, fun and helps you explore Edinburgh! "
        "\n\nWalk around the map area, and when you're close enough to a placemark you'll be able to click on it and collect the hidden word!"
        "\n\nOnce you have enough words to know the song, click on the yellow button to guess it!"
        "\n\nHow many points can you get?"
        "\n\nLog in with Facebook to make the Songle experience so much better!"
    </string>
    <string name="home_press_button_message">Press the yellow Map Button above to get started!</string>
    <string name="home_instructions_photo_header">This is what the game looks like:</string>
    <string name="title_activity_home">Home</string>

    <string name="action_settings">Settings</string>
    <string name="action_instructions">Open Instructions</string>
    <string name="map_help">
        "\nIn the map, every marker shows the location of a word from the lyrics of the song."
        "When you're close enough to a placemark, you'll be able to reveal and collect the word!"
        "\n\nIf you tap on a marker, it will tell you how interesting it is, this may help you plan your route around campus!"
        "\n\n\nIf you click the icon in the top left the menu will be displayed, where you can find:"
        "\n\nHints - different ways of making the game a little easier for you."
        "\nWords Found - The collection of words that you've found already."
        "\nAbout - Information about the app."
        "\n\n\nOnce you think you know the song, press on the yellow button at the bottom right of the screen to guess!"
        "\n\nGood luck!"
    </string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- networkPref probably shouldnt be declared here-->
    <string name="networkPref">WIFI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress">Progress dialog</string>


    <string name="dialog_choose_difficulty">Select map difficulty</string>
    <string name="dialog_ok">OK</string>
    <string name="main_dialog_simple_message">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_neutral">Neutral</string>
    <string name="main_dialog_progress_title">Progress dialog...</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="dialog_correct_guess_message">Correct!</string>
    <string name="dialog_wrong_guess_message">Good try!</string>
    <string name="dialog_youtube">Watch on \nYoutube</string>
    <string name="dialog_goto_hints">Get a\nhint</string>


    <string name="dialog_guess_song">Which song is it?</string>
    <string name="dialog_confirm_guess">Guess!</string>

    <string name="dialog_instructions_header">Instructions</string>

    <string name="dialog_no_connection_header">No Connection Available.</string>
    <string name="dialog_no_connection_text">
        "Songle requires an internet connection to be able to provide the best experience possible!"
        "Click Dismiss to wait for a connection or click Finish to close the app!"
        "\nThe app may stop working as expected without a connection."
    </string>
    <string name="dialog_dismiss_button">Dismiss</string>
    <string name="dialog_finish_button">Finish</string>
    <string name="dialog_retry_button">Retry</string>



    <!-- about screen messages -->
    <string name="about_what">What?</string>
    <string name="about_why">Why?</string>
    <string name="about_who">Who?</string>
    <string name="about_when">When?</string>
    <string name="about_how">How?</string>

    <string name="about_what_text">Songle is an interactive game in which you must guess a song based on words from the lyrics that you\'ve collected!
        Walk around the Edinburgh University Campus to get close enough to a placemark, and when you get there the word will be revealed to you.</string>
    <string name="about_why_text">This app was developed as a project for the UG3 Software Engineering Large Practical course, which takes place during the third year of students from the School of Informatics at the University of Edinburgh.</string>
    <string name="about_who_text">Songle was developed by student s1546270.
        Please contact via email at s1546270@sms.ed.ac.uk</string>
    <string name="about_when_text">Songle was designed and implemented between September 2017 and December 2017</string>
    <string name="about_how_text">The student was provided with the app concept and basic requirements, together with instructions on how to tackle several aspects of this project through lectures and labs.
    The design of the app and the implementation was carried out by the student, together with some additional features to enhance the usability and appeal of the application.</string>


    <string name="hints_header">Hints</string>
    <string name="hints_description">"\nThere are two kinds of hints:"
        "\n\nYou can choose to see a line from the lyrics of the song."
        "\nYou can choose to reduce the number of songs to guess from. This can only be done three times, leaving the guess to a two-option problem."
        "\n\nBeware: Using a hint will affect your final score!"</string>
    <string name="hints_button_show_lyrics">Line From Lyrics</string>
    <string name="hints_button_reduce_guesses">Reduce Possible Guesses</string>

    <string name="facebook_app_id">170218130379883</string>
    <string name="fb_login_protocol_scheme">fb170218130379883</string>
</resources>
