<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s1546270.songle.Fragments.AboutFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout> -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ralf.gpstelephony.TelephonyManagerFragment">


    <!-- WHAT -->
    <TextView
        android:id="@+id/TextView_What"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hints_header"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextView_What2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hints_description"
        app:layout_constraintTop_toBottomOf="@id/TextView_What"
        app:layout_constraintLeft_toLeftOf="@id/TextView_What"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"  />

    <Button
        android:id="@+id/hints_show_lyrics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="16dp"
        android:text="@string/hints_button_show_lyrics"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />


    <Button
        android:id="@+id/hints_reduce_guesses_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="16dp"
        android:text="@string/hints_button_reduce_guesses"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />


</android.support.constraint.ConstraintLayout>

</ScrollView>